UI alignment fixes

--- a/ui/src/app/main/discussion.component/comment/comment.component.scss
+++ b/ui/src/app/main/discussion.component/comment/comment.component.scss
@@ -4,4 +4,5 @@
 
 .main-container{
   margin-left: 15px;
+  margin-right: 5px;
 }
