--- a/ui/src/app/main/discussion.component/discussion.component.scss
+++ b/ui/src/app/main/discussion.component/discussion.component.scss
@@ -7,3 +7,10 @@
   margin-left: 10px;
   width: 23%;
 }
+
+.post-comment{
+  width: 50%;
+  margin-top:20px;
+  overflow: auto;
+  height: 83vh;
+}
